--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>This is xn</title>
+    <meta name="author" content="Cheng En Lyu">
+    <meta name="copyright" content="Cheng En Lyu">
+    <meta name="description" content="Hi, I'm Cheng En Lyu">
+    <meta itemprop="name" content="This is xn">
+    <meta itemprop="image" content="/og.png">
+    <meta itemprop="description" content="Hi, I'm Cheng En Lyu">
+    <meta property="og:title" content="This is xn" >
+    <meta property="og:url" content="https://xn-profolio.web.app/">
+    <meta property="og:image" content="/og.png">
+    <meta property="og:description" content="Hi, I'm Cheng En Lyu" >
+    
   </head>
   <body>
     <div id="app"></div>
